--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ p{
 
 #Quemsomos{
     text-size-adjust:auto;
-    background-color: lightred; 
+    background-color: crimson; 
     font-weight: bold;  
 }
 #Aospais{
@@ -45,7 +45,7 @@ p{
     text-align: left;
    }
 #Sala{
-    background-color: lightred;
+    background-color: crimson;
     font-weight: bold;
     text-size-adjust: auto;
 }
